@@ -38,6 +38,8 @@
 <p>2015-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/blob.c (WriteBlobFile): Was not closing file in certain
+error conditions.  Resolves Coverity CID 10237.</li>
 <li>coders/cineon.c (ReadCINEONImage): Don't trust file header so
 much.  Resolves Coverity CIDs 10079, 10310, 10325.</li>
 <li>coders/art.c (ReadARTImage): Fix signed vs unsigned comparison
